# NetWatch

./: Cargo.toml  INSTALL.md  README.md  netwatch.toml
src/: agent.rs  alerts.rs  collector.rs  config.rs  main.rs  master.rs  tests.rs
src/static/: index.html  styles.css
static/: app.js  charts.js  index.html  settings.js
