[package]
name = "NetWatch"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "netwatch"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1",   features = ["full"] }
axum       = { version = "0.7", features = ["ws"] }
sysinfo    = "0.29"
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
toml       = "0.8"
clap       = { version = "4",   features = ["derive"] }
notify-rust = "4"
tower-http  = { version = "0.5", features = ["cors"] }
reqwest     = { version = "0.12", features = ["json"] }
